--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,27 @@
-requests==2.31.0
-beautifulsoup4==4.12.2
-selenium==4.15.0
-arxiv==2.1.0
-PyPDF2==3.0.1
-pandas==2.1.0
-sqlalchemy==2.0.23
-ccxt==4.1.77
-python-dotenv==1.0.0
-
-discord.py
-python-dotenv
-schedule
-
+# Core dependencies
+pandas==2.2.2
+numpy==1.26.4
+requests>=2.31.0
+httpx>=0.24.0
 aiohttp>=3.8.0
-arxiv>=2.1.0
+
+# x402 & Blockchain
+web3>=6.0.0
+coinbase-advanced-py>=1.0.0
+base58>=2.1.0
+ecdsa>=0.18.0
+
+# Data & Backtesting  
+yfinance>=0.2.0
+backtesting>=1.0.0
+pandas-ta>=0.3.0
+ccxt>=4.0.0
+
+# Environment & Security
+python-dotenv>=1.0.0
+cryptography>=41.0.0
+
+# Additional
+scipy>=1.10.0
+scikit-learn>=1.3.0
+asyncio
